--- a/src/components/App/app.module.scss
+++ b/src/components/App/app.module.scss
@@ -2,7 +2,8 @@
 @import '../../styles/mixins';
 
 .appContainer {
-  overflow: hidden;
+  max-width: 1300px;
+  margin: 0 auto;
 }
 
 .header {
@@ -12,7 +13,6 @@
 
   @media screen and (min-width: 700px) {
     flex-wrap: nowrap;
-    // margin-top: 120px;
   }
 }
 .headerContent,
@@ -20,7 +20,8 @@
   flex: 1 1 100%;
 }
 .headerContent {
-  margin: 100px 50px 300px 0;
+  margin: 100px 50px 300px;
+  z-index: 1;
 
   @media screen and (min-width: 700px) {
     flex: 1 1 45%;
