--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -10,6 +10,8 @@ nav {
 .navList {
   display: flex;
   justify-content: flex-end;
+  margin: 30px 50px;
+  padding-left: 0;
 
   li {
     margin-right: 8px;
