--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,13 @@
 @import-normalize; /* bring in normalize.css styles */
 @import './variables';
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family: $fontPrimary;
@@ -22,6 +29,54 @@ h1 {
   margin-top: 0;
 }
 
+h2 {
+  font-size: 2.3rem;
+}
+
 #root {
   overflow: hidden;
+}
+
+input,
+textarea,
+button {
+  padding: 10px 16px;
+  width: 100%;
+  border-radius: 8px;
+  line-height: 20px;
+}
+
+input,
+textarea {
+  margin-bottom: 16px;
+  border: 2px solid #e7e7e9;
+  font-family: $fontPrimary;
+  font-size: 0.9rem;
+  
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:focus {
+    border: 2px solid $purple;
+  }
+}
+
+button {
+  background-color: $purpleAlt;
+  color: $white;
+  border: none;
+  font-size: 1rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.half {
+  flex: 1 1 100%;
+
+  @media screen and (min-width: 700px) {
+    flex: 1 1 50%;
+  }
 }
