--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -31,6 +31,18 @@ h1 {
 
 h2 {
   font-size: 2.3rem;
+  margin-bottom: 0;
+}
+
+a {
+  text-decoration: none;
+  &:link,
+  &:active {
+    color: $dark;
+  }
+  &:hover {
+    color: $purple;
+  }
 }
 
 #root {
@@ -70,6 +82,10 @@ button {
 }
 
 .flex {
+  display: flex;
+}
+
+.block {
   display: flex;
 }
 
