--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -22,16 +22,23 @@ code {
 
 h1, h2, h3, h4 {
   font-weight: 500;
+  margin-bottom: 0;
 }
 
 h1 {
   font-size: 3.3rem;
-  margin-top: 0;
 }
 
 h2 {
   font-size: 2.3rem;
-  margin-bottom: 0;
+}
+
+h3 {
+  font-size: 1.7rem;
+}
+
+h4 {
+  font-size: 1.3rem;
 }
 
 a {
@@ -81,6 +88,10 @@ button {
   font-size: 1rem;
 }
 
+ul {
+  list-style: none;
+}
+
 .flex {
   display: flex;
 }
@@ -95,4 +106,18 @@ button {
   @media screen and (min-width: 700px) {
     flex: 1 1 50%;
   }
+}
+
+.smallBody {
+  font-size: 1rem;
+}
+
+p {
+  font-size: 1.1rem;
+  line-height: 2.1rem;;
+}
+
+.section-padding {
+  max-width: 1300px;
+  margin: 24px 48px;
 }
