--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,8 @@
 $white: #fff;
 $purple: #7047eb;
 $purpleAlt: #8259fd;
-$yellow: #F9C232;
+$yellow: #fdc83c;
 $dark: #363641;
+$blue: #00ACFF;
 
 $fontPrimary: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
