--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,5 +4,6 @@ $purpleAlt: #8259fd;
 $yellow: #fdc83c;
 $dark: #363641;
 $blue: #00ACFF;
+$pink: #EC4C7D;
 
 $fontPrimary: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
