--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,4 +6,9 @@ $dark: #363641;
 $blue: #00ACFF;
 $pink: #EC4C7D;
 
+$maxContainerWidth: 1300px;
+
 $fontPrimary: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
+$breakpoint800: 800px;
+$breakpoint1200: 1200px;
