--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 .project-container {
   margin-bottom: 200px;
 }
@@ -12,7 +14,7 @@
   .project-content {
     flex: 1 1 100%;
 
-    @media screen and (min-width: 700px) {
+    @media screen and (min-width: $breakpoint800) {
       flex: 1 1 50%;
     }
   }
