--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -5,7 +5,12 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
+  background-color: $white;
+  
+  @media screen and (min-width: $breakpoint800) {
+    background-color: transparent;
+  }
 }
 
 .navList {
