add custom srcoll for hero layout

--- a/src/components/project/Projects.module.scss
+++ b/src/components/project/Projects.module.scss
@@ -17,11 +17,11 @@
     fill: $pink;
   }
 
-  &.blobRight {
+  &.blobright {
     left: 0;
   }
 
-  &.blobLeft {
+  &.blobleft {
     right: 0;
     transform: scale(-1, 1);
   }
