--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -2,6 +2,7 @@
 @import '../../styles/mixins';
 
 nav {
+  visibility: hidden;
   position: fixed;
   top: 0;
   width: 100%;
@@ -32,7 +33,8 @@ nav {
     @include linkPill($purple);
 
     &:hover {
-      background: $purpleAlt;
+      background-color: $purpleAlt;
+      transition: background-color 250ms linear;
     }
   }
 }
