--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,6 +1,6 @@
 // maybe change into an extend
 
-@mixin linkPill($background, $color: $white) {
+@mixin linkPill($backgroundColor, $color: $white) {
   padding: 0.7rem 1.5rem;
   border-radius: 20px;
   font-weight: 600;
@@ -14,6 +14,6 @@
   }
 
   &:link {
-    background: $background;
+    background-color: $backgroundColor;
   }
 }
