--- a/src/components/project/Projects.module.scss
+++ b/src/components/project/Projects.module.scss
@@ -30,6 +30,7 @@
 .projectDesktopImage {
   width: 100%;
   height: auto;
+  background-color: $white;
   @media screen and (min-width: $breakpoint800) {
     min-width: 550px;
   }
