--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,6 +4,7 @@
 html {
   box-sizing: border-box;
   background-color: #F4C1F6;
+  scroll-behavior: smooth;
 }
 
 *, *:before, *:after {
@@ -29,11 +30,10 @@ code {
 
 h1, h2, h3, h4 {
   font-weight: 500;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 h1 {
-  margin-top: 0;
   font-size: 3.3rem;
 }
 
@@ -46,7 +46,6 @@ h3 {
 }
 
 h4 {
-  margin: 0;
   font-size: 1.3rem;
 }
 
@@ -106,10 +105,6 @@ ul {
   display: flex;
 }
 
-.block {
-  display: flex;
-}
-
 .half {
   flex: 1 1 100%;
 
@@ -122,7 +117,8 @@ ul {
   font-size: 1rem;
 }
 
-p {
+p,
+.font-body {
   font-size: 1.1rem;
   line-height: 2.1rem;;
 }
