--- a/src/components/project/Projects.module.scss
+++ b/src/components/project/Projects.module.scss
@@ -2,8 +2,17 @@
 
 .blob {
   position: absolute;
-  bottom: -180px;
+  // bottom: -180px;
+  // width: 500px;
+  // height: 600px;
+  top: 30%;
+  width: 150%;
   z-index: -1;
+
+  @media screen and (min-width: $breakpoint800) {
+    // width: auto;
+    // height: auto;
+  }
 
   &.yellow {
     fill: $yellow;
@@ -19,11 +28,13 @@
 
   &.blobright {
     left: 0;
+    transform: translateY(-50%) rotate(23deg);
   }
 
   &.blobleft {
     right: 0;
-    transform: scale(-1, 1);
+    transform: scale(-1, 1) translateY(-50%) rotate(23deg);
+    
   }
 }
 
