--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,5 +1,10 @@
 @import '../../styles/variables';
 
+.contentContainer {
+  margin: 0 auto;
+  max-width: 1600px;
+}
+
 .sectionMargin {
   margin-bottom: 164px;
 }
