--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -119,3 +119,13 @@
     }
   }
 }
+
+.socialLink {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  svg {
+    margin-bottom: 6px;
+  }
+}
