--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -27,9 +27,9 @@
   .project-display {
     min-width: 0;
 
-    img {
-      box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
-    }
+    // img {
+    //   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    // }
   }
   
   .project-grid {
