--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -131,7 +131,7 @@ p,
     margin: 24px 48px;
   }
 
-  @media screen and (min-width: $maxContainerWidth) {
+  @media screen and (min-width: 1400px) {
     margin: 24px auto;
   }
 }
